--- a/index.html
+++ b/index.html
@@ -8,3 +8,57 @@
         <script src="javascript.js"></script>
     </body>
 </html>
+
+
+<!--function playRound(playerSelection, computerSelection) {
+    if (playerSelection.toLowerCase() === "rock") {
+        console.log("You chose Rock");
+    //if player chooses paper, notify them
+    } else if (playerSelection.toLowerCase() === "paper") {
+        console.log("You chose Paper");
+    //if player chooses scissors, notify them
+    } else if (playerSelection.toLowerCase() === "scissors") {
+        console.log("You chose Scissors");
+    //if they choose anything other than rock, paper, scissors, terminate
+    } else {
+        console.log("Oh no!");
+    }
+}
+
+//play a single round of rock paper scissors
+    //computer chooses rock, paper, or scissors
+    //make function for getComputerChoice
+    /*function getComputerChoice() */
+    const computerSelection = ["Rock", "Paper", "Scissors"];
+    //selection becomes random
+    const random = Math.floor(Math.random() * computerSelection.length);
+    //shows computer's selection
+    console.log("The computer chose " + computerSelection[random] + ".");
+
+    //player functions
+    //player chooses rock
+    //prompt for Rock
+    //make Rock case sensitive
+    //if anything other than rock, Rock, RocK, ROcK, etc. end program
+    //prompt user for rock, paper, or scissors
+    //make function for playerSelection
+    /*function playerSelection()*/
+    const playerSelection = prompt("Choose Rock, Paper, or Scissors.");
+    //if player chooses rock, notify them
+console.log(playRound(playerSelection, computerSelection)); -->
+
+<!--function playRound(playerSelection, computerSelection) {
+    if (computerSelection === "Rock" && playerSelection === "scissors") {
+        console.log("You Lose!");
+    }
+    if (computerSelection === "Rock" && playerSelection === "paper") {
+        console.log("You Win!");
+    }
+    if (computerSelection === "Rock" && playerSelection === "rock") {
+            console.log("It's a Tie!");
+    }
+}
+
+let computerSelection = getComputerChoice()
+let playerSelection = prompt("Choose Rock, Paper, or Scissors!")
+console.log(playRound(playerSelection.toLowerCase(), computerSelection));-->
